# bs-poc

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  esprimo-d757_i5-6400_gskill-F4-2133C15-16GIS.json  fuzz-summary.json  keys.txt  plot_bench.ipynb  plot_buddy.ipynb  plot_inject.ipynb  plot_measure.ipynb  plot_pfns.ipynb  plot_spoiler.ipynb  run_release.sh  secrets.txt  sig_correct.txt  wrapper.h
lib/rsa/: Makefile  rsa_crt.c  rsa_crt.h
lib/spoiler/: .gitignore  Makefile  TODO.md  spoiler.c  spoiler.h  spoiler_vis.py
lib/spoiler/archive/: run.py
lib/spoiler/include/: drama.h  misc.h  process_handling.h  ptcont.h  rowconflict.h  spoiler.h  stack.h
lib/spoiler/memory_profiling/: plot_spoiler.py  process_log.py
lib/spoiler/src/: drama.c  hammer.c  main.c  misc.c  process_handling.c  ptcont.c  rowconflict.c  rowhammer_ddr4.c  spoiler.c  stack.c
lib/spoiler/victims/: victim.c
shm_test/: Makefile  client.c  server.c
src/: jitter.rs  lib.rs  main.rs  timer.rs
src/allocator/: README.md  buddyinfo.rs  coco.rs  hugepage.rs  hugepage_rnd.rs  mmap.rs  mod.rs  pfn.rs  spoiler.rs  util.rs
src/consec_alloc/: hugepage_rnd.rs
src/forge/: hammerer.rs  mod.rs
src/hammerer/: README.md  dev_mem.rs  dummy.rs  mod.rs
src/hammerer/blacksmith/: README.md  blacksmith_config.rs  hammerer.rs  jitter.rs  mod.rs
src/hammerer/dummy/: hammerer.rs  mod.rs
src/memory/: README.md  allocator.rs  consec_blocks.rs  consec_checker.rs  dram_addr.rs  flippy_page.rs  hugepage.rs  keyed_cache.rs  mem_configuration.rs  memblock.rs  memory.rs  mod.rs  pagemap_info.rs  pfn_offset.rs  pfn_offset_resolver.rs  pfn_resolver.rs  timer.rs  util.rs  virt_to_phys.rs
src/memory/consec_alloc/: buddyinfo.rs  coco.rs  hugepage_rnd.rs  mmap.rs  mod.rs  spoiler.rs
src/util/: README.md  anyhow.rs  blacksmith_config.rs  cancelable_thread.rs  constants.rs  ipc.rs  mod.rs  named_progress.rs  range.rs  rng.rs  util.rs
src/victim/: README.md  dev_mem_check.rs  mem_check.rs  mod.rs  page_inject.rs  process.rs  sphincs_plus.rs  stack_process.rs  victim.rs
tools/: SPHINCSplus.py  blacksmith_vis.ipynb  bs_fuzz_table.ipynb  check_consecs.ipynb  cryptanalysis.ipynb  cryptanalysis_lib.py  cryptanalysis_lib_c.py  exploitable.ipynb  fips205.py  plot_bench.ipynb  plot_inject.ipynb  plot_spoiler.ipynb  postprocessing.py  requirements.txt
victims/: .main.cc.swp  Makefile
victims/lib/memutils/: .gitignore  Makefile  memutils.c  memutils.h
victims/shared-mem/: .gitignore  Makefile  main.c
victims/stack-dummy/: Makefile  main.c  main.cc  stack
