[package]
name = "bs_poc"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
jitter_dump = []
spoiler_dump = []
sphincs_instrumentation = []

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.3", features = ["derive"] }
lazy_static = "1.4.0"
libc = "0.2.155"
memmap2 = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
serde_with = "3.0.0"
serde-enum-str = "0.3.2"
nalgebra = "0.32.2"
log = "0.4.0"
env_logger = "0.11.5"
pagemap = "0.1.0"
ctrlc = "3.4.1"
lpfs = { path = "lib/lpfs" }
itertools = "0.12.1"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
csv = "1.3.0"
thiserror = "2.0.10"
chrono = "0.4.39"
sha2 = "0.10.8"
hex = "0.4.3"
perfcnt = "0.8.0"

[dependencies.iced-x86]
version = "1.19.0"
features = ["code_asm"]

[build-dependencies]
cc = "1.0"
glob = "0.3.1"

[build-dependencies.bindgen]
version = "0.69.4"
features = ["experimental"]

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies.x86]
version = "0.47.0"
features = ["performance-counter"]

[profile.test]
opt-level = 1
